--- a/L200140033_tugas03.html
+++ b/L200140033_tugas03.html
@@ -643,7 +643,7 @@
 		google.maps.event.addListener(map, 'click', function(e) {
 			var nilai_latitude = e.latLng.lat();
 			var nilai_longitude = e.latLng.lng();
-			tempel_info(nilai_latitude,nilai_longitude);
+			infowindow(nilai_latitude,nilai_longitude);
 		});
 		startButtonEvents();
 		}
