--- a/L200140033_tugas03.html
+++ b/L200140033_tugas03.html
@@ -708,6 +708,8 @@
 					<input class="button" id="btnSat" type="button" value="Satellite">
 					<input class="button" id="btnHyb" type="button" value="Hybrid">
 					<input class="button" id="btnTer" type="button" value="Terrain">
+					<br/>
+					<a href='l200140033.github.io'  class='btn btn-warning pull-right'><span class='glyphicon glyphicon-arrow-left'></span> Back</a>
 				</div>
 			</div>
 		</div>
