--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
 						<td><h2><a href="https://l200140033.github.io/L200140033_tugas02.html" target='_blank'>TUGAS 02</a></h2></td>
 					</tr>
 					<tr>
-						<td><h2><a href="https://l200140033.github.io/L200140033_tugas03.html" target='_blank'>TUGAS 03</a></h2></td>
+						<td><h2><a href="https://l200140033.github.io/L200140033_tugas03.html">TUGAS 03</a></h2></td>
 					</tr>
 					<tr>
-						<td></td>
+						<td><h2><a href="https://l200140033.github.io/L200140033_tugas04.html" target='_blank'>TUGAS 04</a></h2></td>
+					</tr>
+					<tr>
+						<td><h2><a href="https://l200140033.github.io/L200140033_tugas05.html">TUGAS 05</a></h2></td>
 					</tr>
 				</table>
 			</div>
