--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<style type="text/css">
 		.align{
-		font-family:Times New Roman;
+		font-family: Verdana;
 		text-align: center;
 		}
 		html { height: 100% }
