--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div class="col-md-6 align">
 				<table class="table table-hover table-striped">
 					<tr>
-						<td/><h2><a href="https://github.com/L200140033/Sistem-Informasi-Geografis-2017/blob/master/L200140033_TUGAS01.pdf" target='_blank'>TUGAS 01 <br/> Belajar Javascript</a></h2></td>
+						<td/><h2><a href="https://github.com/L200140033/Sistem-Informasi-Geografis-2017/blob/master/L200140033_TUGAS01.pdf" target='_blank'>TUGAS 01 <br/> <h5>(Belajar Javascript)</h5></a></h2></td>
 					</tr>
 					<tr>
 						<td><h2><a href="https://l200140033.github.io/L200140033_tugas02.html" target='_blank'>TUGAS 02  <br/> Menampilkan Peta Berdasarkan Lokasi User</a></h2></td>
