--- a/jarak.html
+++ b/jarak.html
@@ -6,9 +6,9 @@
         <style type="text/css">
               html { height: 100% }
               body { height: 100%; margin: 5px; }
-              #mapDiv { width: 100%; height: 95%; }
+              #mapDiv { width: 500px; height:300px; }
 			  #directionsMatrixDiv { padding:10px; width: 600px; height: 500px; }
-			  #mapContainerDiv { padding:10px; float:left; width: 800px; height: 500px}
+			  #mapContainerDiv { padding:10px; float:left; width: 500px; height: 300px}
 			  #matrixResultDiv {overflow-y: auto;max-width:600px; max-height:600px;}
 			  
         </style>
@@ -246,11 +246,11 @@
 					<div class="panel panel-info">
 						<div class="panel-heading"><h5>Mencari Jarak</h5></div>
 						<div class="panel-body">
-							<span id="mapContainerDiv">
+				
 								<b>Directions</b>
 								<div id="mapDiv" >
 								</div>
-							</span>
+	
 							<span id="directionsMatrixDiv">
 								<b>Temukan Matriks Jarak anda:</b>
 								</br>
