--- a/L200140033_tugas04.html
+++ b/L200140033_tugas04.html
@@ -1,2 +1,49 @@
-<iframe src="https://www.google.com/maps/embed?pb=!1m0!4v1497786963978!6m8!1m7!1sF%3A-bMHmyrswONA%2FWUFNBAhxDWI%2FAAAAAAAAAaQ%2F99BTQ4i7GMUY6diOGlFh4m83JaTlubjKQCLIBGAYYCw!2m2!1d-7.5556268!2d110.7716616!3f78!4f0!5f0.7820865974627469" width="758" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
+<!DOCTYPE html>
+<html>
+    <head>
+		<title>Tugas 04</title>
+        <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+        <style type="text/css">
+              html { height: 100% }
+              body { height: 100%; margin: 5px; }
+              #MapDiv { width: 100%; height: 95%; }
+			  #MapContainerDiv { padding:10px; float:left; width: 55%; height: 600px;}
+			  #DirectionsContainerDiv { padding:5px; float:right; width: 40%; height: 600px;}
+			  #DirectionsListDiv {overflow-y: auto; max-height:300px;}
+			  ul.addressList {list-style-type:circle;}
+        </style>
+        <!-- Include Google Maps JS API -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		
+		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgmqSHQg_5KAvV97-yoc5F02KIcOZRbOA&sensor=false">//Menggunakan Key google API Map Ghofar
+		</script>
+    </head>
+    <body>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="panel panel-info">
+						<div class="panel-heading">
+							<center>
+								<h1>Tugas 04 - Menampilkan Streetview</h1><br/>
+								<a href='l200140033.github.io'  class='btn btn-danger'><span class='glyphicon glyphicon-arrow-left'></span> Back to Index</a>
+								<a href='https://www.google.co.id/maps/contrib/100822750238139483347/photos/@-7.5567342,110.7714947,3a,75y,169h,90t/data=!3m7!1e1!3m5!1s-yT3vQPwxABQ%2FWSJjXHclvpI%2FAAAAAAAAAVY%2F7wim_n9_9KszjjYJ-TkPfYa3mLaRdGPiwCLIB!2e4!6s%2F%2Flh5.googleusercontent.com%2F-yT3vQPwxABQ%2FWSJjXHclvpI%2FAAAAAAAAAVY%2F7wim_n9_9KszjjYJ-TkPfYa3mLaRdGPiwCLIB%2Fw203-h100-p-k-no-pi-11-ya45.500004-ro0-fo100%2F!7i4608!8i2304!4m3!8m2!3m1!1e1?hl=id'  target='_blank' class='btn btn-warning '>  Menuju Akun Streetview </a> 
+							</center>
+						</div>
+						<br/>					
+						<h4><label>1. Pertigaan Teknik Sipil Gedung FKI - Universitas Muhammadiyah Surakarta</label></h4>
+						<center>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m0!4v1497938889718!6m8!1m7!1sF%3A-yT3vQPwxABQ%2FWSJjXHclvpI%2FAAAAAAAAAVY%2F7wim_n9_9KszjjYJ-TkPfYa3mLaRdGPiwCLIB!2m2!1d-7.556734199999998!2d110.7714947!3f169!4f0!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+						</center>
+						<br/>
+						<h4><label>2. Depan Gedung Induk Siti Walidah - Universitas Muhammadiyah Surakarta</label></h4>
+						<center>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m0!4v1497938789151!6m8!1m7!1sF%3A-PUp9dFXLTks%2FWSJjENHaKrI%2FAAAAAAAAAVE%2FHKoK-UofTwYkwd7oLitGyC0qOvvGOHz8QCLIB!2m2!1d-7.557044323163418!2d110.771457105875!3f94!4f0!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+						</center>
+					</div>
+				</div>
+			</div>
+		</div>
 				
+    </body>
+</html>
