--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<td><h2><a href="https://l200140033.github.io/L200140033_tugas03.html">TUGAS 03 </a> </h2> <h5><br/> (Membuat Polygon Google Maps)</td>
 					</tr>
 					<tr>
-						<td><h2><a href="https://www.google.co.id/maps/search/ums/@-7.5567342,110.7714947,3a,75y,222.97h,90t/data=!3m8!1e1!3m6!1s-yT3vQPwxABQ%2FWSJjXHclvpI%2FAAAAAAAAAVY%2F7wim_n9_9KszjjYJ-TkPfYa3mLaRdGPiwCLIB!2e4!3e11!6s%2F%2Flh5.googleusercontent.com%2F-yT3vQPwxABQ%2FWSJjXHclvpI%2FAAAAAAAAAVY%2F7wim_n9_9KszjjYJ-TkPfYa3mLaRdGPiwCLIB%2Fw203-h100-k-no-pi-0-ya53.71882-ro-0-fo100%2F!7i4608!8i2304?hl=id" target='_blank'>TUGAS 04 </a> </h2> <h5><br/> (Upload Street View)</td>
+						<td><h2><a href="https://l200140033.github.io/L200140033_tugas04.html">TUGAS 04 </a> </h2> <h5><br/> (Upload Street View)</td>
 					</tr>
 					<tr>
 						<td><h2><a href="https://l200140033.github.io/L200140033_tugas05.html">TUGAS 05 </a> </h2> <h5><br/> (Membuat Integrasi Google Maps Chapter 07)</td>
