--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
 	<body>
 
 	<div class="container">
-	<h1 class="align">TUGAS SISTEM INFORMASI GEOGRAFIS</h1>
-	<h1 class="align">MUHAMMAD ABDUL GHOFAR / L200140033</h1>
+	<nav class="navbar navbar-inverse">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <a class="navbar-brand align" href="https://l200140033.github.io"><span class="glyphicon glyphicon-education"></span> TUGAS SISTEM INFORMASI GEOGRAFIS 2017</a>
+	    </div>
+	  </div>
+	</nav>
 	<hr>	<br/>
 		<div class="row">
 		<div class="col-md-3">
