--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body>
 
 	<div class="container">
-	<nav class="navbar navbar-inverse">
+	<nav class="navbar navbar navbar-default navbar-fixed-top">
 	  <div class="container-fluid">
 	    <div class="navbar-header">
 	      <a class="navbar-brand align" href="https://l200140033.github.io"><span class="glyphicon glyphicon-education"></span> TUGAS SISTEM INFORMASI GEOGRAFIS 2017</a>
