--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 	<title>Tugas SI Geografi</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<style type="text/css">
 		.align{
 		font-family: Verdana;
@@ -17,39 +19,44 @@
 	<body>
 
 	<div class="container">
-	<nav class="navbar navbar navbar-default navbar-fixed-top">
-	  <div class="container-fluid">
-	    <div class="navbar-header">
-	      <a class="navbar-brand align" href="https://l200140033.github.io"><span class="glyphicon glyphicon-education"></span> TUGAS SISTEM INFORMASI GEOGRAFIS 2017</a>
-	    </div>
-	  </div>
-	</nav>
-	<hr>	<br/>
-		<div class="row">
-		<div class="col-md-3">
-		<b><h4>Link:</h4></b>
-			<ul>
-				<li><a href="https://github.com/L200140033" target='_blank'>Github: L200140033</a></li>
-				<li><a href="https://github.com/L200140033/Sistem-Informasi-Geografis-2017" target='_blank'>Repositori: Sistem-Informasi-Geografis-2017</a></li>
-				<li><a href="https://github.com/L200140033/l200140033.github.io " target='_blank'>Repositori: l200140033.github.io </a></li>
-			</ul>
+		<nav class="navbar navbar navbar-default navbar-fixed-top">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					
+				  <a class="navbar-brand align" href="https://l200140033.github.io"><span class="glyphicon glyphicon-education"></span> TUGAS SI GEOGRAFIS</a>
+				  </div>
+				  <ul class="nav navbar-nav">
+					  <li class="dropdown active"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Github<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+						  <li><a href="https://github.com/L200140033/">Github</a></li>
+						  <li><a href="https://github.com/L200140033/l200140033.github.io">Repositori</a></li>
+						</ul>
+					  </li>
+				  </ul>
+				</div>
 			</div>
+		</nav>
+	<hr>	
+	<br/>
+	<div class="row">
+		<div class="col-md-3">
+		</div>
 			<div class="col-md-6 align">
 				<table class="table table-hover table-striped">
 					<tr>
-						<td/><h2><a href="https://github.com/L200140033/Sistem-Informasi-Geografis-2017/blob/master/L200140033_TUGAS01.pdf" target='_blank'>TUGAS 01 </a></h2> <h5><br/>(Belajar Javascript)</h5></td>
+						<td/><h3><a href="https://github.com/L200140033/Sistem-Informasi-Geografis-2017/blob/master/L200140033_TUGAS01.pdf" target='_blank'>TUGAS 01 </a></h3> <h5><br/>(Belajar Javascript)</h5></td>
 					</tr>
 					<tr>
-						<td><h2><a href="https://l200140033.github.io/L200140033_tugas02.html" target='_blank'>TUGAS 02 </a> </h2> <h5><br/> (Menampilkan Peta Berdasarkan Lokasi User)</td>
+						<td><h3><a href="https://l200140033.github.io/L200140033_tugas02.html" target='_blank'>TUGAS 02 </a> </h3> <h5><br/> (Menampilkan Peta Berdasarkan Lokasi User)</td>
 					</tr>
 					<tr>
-						<td><h2><a href="https://l200140033.github.io/L200140033_tugas03.html">TUGAS 03 </a> </h2> <h5><br/> (Membuat Polygon Google Maps)</td>
+						<td><h3><a href="https://l200140033.github.io/L200140033_tugas03.html">TUGAS 03 </a> </h3> <h5><br/> (Membuat Polygon Google Maps)</td>
 					</tr>
 					<tr>
-						<td><h2><a href="https://l200140033.github.io/L200140033_tugas04.html">TUGAS 04 </a> </h2> <h5><br/> (Upload Street View)</td>
+						<td><h3><a href="https://l200140033.github.io/L200140033_tugas04.html">TUGAS 04 </a> </h3> <h5><br/> (Upload Street View)</td>
 					</tr>
 					<tr>
-						<td><h2><a href="https://l200140033.github.io/L200140033_tugas05.html">TUGAS 05 </a> </h2> <h5><br/> (Membuat Integrasi Google Maps Chapter 07)</td>
+						<td><h3><a href="https://l200140033.github.io/L200140033_tugas05.html">TUGAS 05 </a> </h3> <h5><br/> (Membuat Integrasi Google Maps Chapter 07)</td>
 					</tr>
 				</table>
 			</div>
