--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 						<ul class="dropdown-menu">
 						  <li><a href="https://github.com/L200140033/">Github</a></li>
 						  <li><a href="https://github.com/L200140033/l200140033.github.io">Repositori</a></li>
+						  <li><a href="https://l200140033.github.io/bio.html">Data Diri</a></li>
 						</ul>
 					  </li>
 				  </ul>
