--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 				  <ul class="nav navbar-nav">
 					  <li class="dropdown active"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Github<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-						  <li><a href="https://github.com/L200140033/">Github</a></li>
-						  <li><a href="https://github.com/L200140033/l200140033.github.io">Repositori</a></li>
-						  <li><a href="https://l200140033.github.io/bio.html">Data Diri</a></li>
+						  <li><a href="https://github.com/L200140033/" target="_blank">Github</a></li>
+						  <li><a href="https://github.com/L200140033/l200140033.github.io" target="_blank">Repositori</a></li>
+						  <li><a href="https://l200140033.github.io/bio.html" target="_blank">Data Diri</a></li>
 						</ul>
 					  </li>
 				  </ul>
